src/embed/style.scss
/* VARS */

$theme: #DB5600;
$bg-colour: #f2e8d5;
$dark-grey: #584E3B;

$supported: #39b54a;
$partial: #A8BD04;
$not-supported: #c44230;
$unknown: #838383;




/* RESET */
html, body, div, span, 
h1, p, a, small, strong, 
table, tbody, thead, tr, th, td, 
footer, header, main {
	margin: 0;
	padding: 0;
	border: 0;
	font: inherit;
	font-size: 100%;
	vertical-align: baseline;
}
footer, header {
	display: block;
}
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}



/* BASE */

html {
    font-size: 62.5%;
}
body {
    font-size: 1.4rem;
    line-height: 1.4;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}
a {
    color: inherit; 
}
h1 a {
	text-decoration: none;
}
small,
.legend {
	font-size: 1.1rem;
}
strong {
	font-weight: 600;
}



/* FEATURE LAYOUT */

.feature {
	background-color: $bg-colour;
	position: relative;
	border: 3px solid $theme;
	border-bottom: 0;

	display: none;
}
.feature-header {
	padding: 10px 10px 0;
}
.feature-main {
	padding: 10px;

	@media screen and (max-width: 500px) {
		padding: 10px 5px;
	}	
}
.feature-footer {
	padding: 5px 10px;
	margin-top: 20px;
	background-color: $theme;
	color: #fff;
	font-size: 1.1rem;
}



/* FEATURE HEADER */

.feature-title {
	margin-bottom: 5px;
	font-size: 2rem;

	span {
		margin-bottom: 5px;
		padding-right: 10px
	}
}
 
.feature-description {
	font-size: 1.6rem;
}




/* FEATURE TABLE GENERAL */

table.feature-support {
	line-height: 1.2;
	width: 100%;
	border-collapse: collapse;
	border-spacing: 0;
	margin-bottom: 20px;
	
	font-size: 1.4rem;

	@media screen and (max-width: 700px) {
		font-size: 1.2rem;
	}
}




/* TABLE HEAD */

table.feature-support thead th {
	width: 10%;
	vertical-align: bottom;
	border: 5px solid $bg-colour;
}

.browser-title {
	display: block;
	margin-bottom: 5px;
	padding-bottom: 5px;
	border-bottom-style: solid;
	border-bottom-width: 5px;
	position: relative;

	@media screen and (max-width: 700px) {
		height: 150px;

		span {
			position: absolute;
			border-bottom: 0;
			padding-left: 5px;
			padding-bottom: 0;

			-webkit-transform: rotate(-90deg);
			-moz-transform: rotate(-90deg);
			-ms-transform: rotate(-90deg);
			-o-transform: rotate(-90deg);
			transform: rotate(-90deg);
			white-space: nowrap;

			left: 0;
		    bottom: 20px;
		    text-align: left;
		    width: 100%;
		}
	}
}

th.ie .browser-title,
th.edge .browser-title {
	border-bottom-color: #233d61;
}
th.chrome .browser-title {
	border-bottom-color: #3f77bb;
}
th.firefox .browser-title {
	border-bottom-color: #a36223;
}
th.safari .browser-title {
	border-bottom-color: #666;
}
th.ios_saf .browser-title {
	border-bottom-color: #333;
}
th.opera .browser-title {
	border-bottom-color: #812323;
}
th.op_mini .browser-title {
	border-bottom-color: #992626;
}
th.android .browser-title {
	border-bottom-color: #7ba13b;
}








/* FEATURE STATISTICS */

tr.statistics td {
	border: 5px solid $bg-colour;
	text-align: center;
	position: relative;
}

tr.statistics td:hover {
	cursor: default;
}


tr.statistics td span:not(.usage) {
	display: block;
	height: 100%;
	width: 100%;
	padding: 7px 0;
	position: relative;
}


tr.current td {
	border: 5px solid $dark-grey;
	position: relative;
}
tr.current td span {
	border-top: 5px solid $dark-grey;
}

span.usage {
	padding-top: 7px;
	position: absolute;
	width: 100%;
	background-color: #fff;
	height: 100%;
	top: 0;
	left: 0;

	display: none;
}


td:hover span.usage {
	display: block;
}


tr.future_1 td span {
	border-top: 5px solid $bg-colour;
}



tr.statistics td.y span:not(.usage),
.legend .y {
	background-color: $supported;
	color: #fff;
}
tr.statistics td.n span:not(.usage),
tr.statistics td.p span:not(.usage),
tr.statistics td.d span:not(.usage),
.legend .n {
	background-color: $not-supported;
	color: #fff;
}
tr.statistics td.a span:not(.usage),
.legend .a {
	background-color: $partial;
	color: #fff;
}

tr.statistics td.u span:not(.usage),
.legend .u {
	background-color: $unknown;
	color: #fff;
}

tr.statistics td.x span:not(.usage):after {
	// with Prefix
	content: ' ';
	position: absolute;
	top: 0;
	right: 0;
	background-color: #ff6;
	color: #000;
	line-height: 1;
	font-size: 1pt;

	height: 10px;
    width: 10px;

    @media screen and (max-width: 600px) {
    	height: 6px;
    }
}
.legend .x {
	background-color: #ff6;
	color: #000;
}


.legend div {
	display: inline-block;
	width: auto;
	padding: 3px 5px;
	margin-right: 5px;
}

.note {
	float: right;
	font-weight: 600;

	@media screen and (max-width:500px) {
		float: none;
		display: block;
		margin-bottom: 5px;
	}
}

span.a {
	color: $partial;
}
span.y {
	color: $supported;
}

